--- a/Desktop/Portifólio/Trabalho HTML, CSS e JS/projeto_faculdade-master/entrar2.html
+++ b/Desktop/Portifólio/Trabalho HTML, CSS e JS/projeto_faculdade-master/entrar2.html
@@ -18,7 +18,7 @@
 <body>
   <!-- CABEÇALHO -->
   <header class="navbar navbar-expand-sm navbar-light bg-light">
-    <a href="home2.html"><img src="img/LOGO.png" alt="logo" id="logo" href="home2.html"></a>
+    <a href="index.html"><img src="img/LOGO.png" alt="logo" id="logo" href="index.html"></a>
     <div class=" flex-grow-1" id="navbar">
       <ul class="navbar-nav mr-auto" id="navOptions">
         <li class="nav-item active">
