--- a/Desktop/Portifólio/Trabalho HTML, CSS e JS/projeto_faculdade-master/index.html
+++ b/Desktop/Portifólio/Trabalho HTML, CSS e JS/projeto_faculdade-master/index.html
@@ -15,11 +15,11 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
-<body>
+<body class="m-auto">
   
   <!-- CABEÇALHO -->
-  <header class="navbar navbar-expand-sm navbar-light bg-light">
-    <a href="home2.html"><img src="img/LOGO.png" alt="logo" id="logo" href="home2.html"></a>
+  <header class="navbar navbar-expand-sm navbar-light bg-light w-100">
+    <a href="index.html"><img src="img/LOGO.png" alt="logo" id="logo" href="index.html"></a>
     <div class=" flex-grow-1" id="navbar">
       <ul class="navbar-nav mr-auto" id="navOptions">
         <li class="nav-item active">
